2012-05-16  Kirit Saelensminde  <kirit@felspar.com>
 The mock client instances can now be used in queries properly. Added some extra tests to make sure that normal remote instances, or their normalised URLs work as expected in queries.

2012-05-15  Kirit Saelensminde  <kirit@felspar.com>
 Fixed a problem where the create operation would always convert values to strings. This broke `null` values sent over the wire.
 Set a httplib2 option so that SSL certificates are not checked.

2012-05-14  Kirit Saelensminde  <kirit@felspar.com>
 Treat any request whose Content-Type starts with 'application/json' as JSON rather than look for an exact match.

2012-05-08  Kirit Saelensminde  <kirit@felspar.com>
 Altered the RemoteForeignKey field's get_prep_value so that it uses the super method of the same name instead of delegating to the get_db_prep_value method. This fixes a problem on Django 1.4 in queries.

2012-05-01  Kirit Saelensminde  <kirit@felspar.com>
 The internal (fake HTTP) requests will now prefer to send JSON to the client as it is a richer data format that the standard HTTP media types.

2012-04-29  Kirit Saelensminde  <kirit@felspar.com>
 The conversion of types to JSON no longer takes a request as the first parameter. This allows objects to be converted without having to do it within the context of a request.
 Added JSON handler for the server side of the field type NullBooleanField.
 Fixed a bug where the user agent would sign the wrong POST data.
 The update operation no longer returns a redirect.
 Many to many fields now appear in the data arrays section of the instance fields rather than with the other fields.
 The user agent POST requester can now be provided with a list of status codes that it will accept as successful and if it cannot parse the JSON body it will return an empty dict.

2012-04-18  Kirit Saelensminde  <kirit@felspar.com>
 Fixed a problem where forwarded authentication could lead to an infinite recursion error.
