@@ -1,4 +1,7 @@
 2012-05-16  Kirit Saelensminde  <kirit@felspar.com>
+ The create operation now resets the sequence numbers in case a primary key on an auto-increment field is specified.
+
+2012-05-16  Kirit Saelensminde  <kirit@felspar.com>
  The mock client instances can now be used in queries properly. Added some extra tests to make sure that normal remote instances, or their normalised URLs work as expected in queries.
 
 2012-05-15  Kirit Saelensminde  <kirit@felspar.com>
